//
// Copyright (c) Peter Vrenken. All rights reserved. See the license on https://github.com/vrenken/EtAlii.Ubigia
syntax = "proto3";
import "Data/Clients/_Grpc/_Model.proto";
package EtAlii.Ubigia.Api.Transport.Grpc.WireProtocol;

// The Properties Grpc service definition.
service PropertiesGrpcService
{
	// Try to authenticate.
	rpc Get (PropertiesGetRequest) returns (PropertiesGetResponse) {}
	rpc Post (PropertiesPostRequest) returns (PropertiesPostResponse) {}
}

message PropertiesGetRequest
{
	Identifier EntryId = 1;
}

message PropertiesGetResponse
{
	PropertyDictionary PropertyDictionary = 1;
}

message PropertiesPostRequest
{
	Identifier EntryId = 1;
	PropertyDictionary PropertyDictionary = 2;
}

message PropertiesPostResponse
{
}
